--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Kinetic HTML Template</title>
-<!--
-
-Template 2090 Kinetic
-
-http://www.tooplate.com/view/2090-kinetic
-
--->
+        <title>Samuel Ruiz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -36,7 +29,7 @@ http://www.tooplate.com/view/2090-kinetic
           <div class="ct" id="t2">
             <div class="ct" id="t3">
               <div class="ct" id="t4">
-                <section>  
+                <section>
                  <ul>
                    <a href="#t1"><li class="icon fa fa-home" id="uno"></li></a>
                    <a href="#t2"><li class="icon fa fa-user" id="dos"></li></a>
@@ -44,7 +37,7 @@ http://www.tooplate.com/view/2090-kinetic
                    <a href="#t4"><li class="icon fa fa-phone" id="cuatro"></li></a>
                  </ul>
                   <div class="page" id="p1">
-                     <li class="icon fa fa-home"><span class="title">Welcome To</span><h4>Kinetic</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius neque non imperdiet auctor. Duis sit amet velit eu lorem sollicitudin sodales.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>   
+                     <li class="icon fa fa-home"><span class="title">Welcome To</span><h4>Kinetic</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius neque non imperdiet auctor. Duis sit amet velit eu lorem sollicitudin sodales.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>
                   </div>
                   <div class="page" id="p2">
                     <li class="icon fa fa-user"><span class="title">About Us</span>
@@ -52,8 +45,8 @@ http://www.tooplate.com/view/2090-kinetic
                       <div class="row">
                         <div class="col-md-6">
                           <div class="left-text">
-                            <h4>We are Kinetic</h4>
-                            <p>This kinetic HTML template is provided by Tooplate for free of charge. You may use this layout for your website. Please tell your friends about Tooplate. Thank you.<br><br>Cras suscipit, sem vel cursus iaculis, nibh augue placerat enim, in varius dolor turpis at augue. Nulla facilisi. In quis sem pellentesque, tristique ligula non, tincidunt ipsum. Curabitur porttitor, justo id egestas egestas, enim augue lacinia quam, et volutpat velit augue sodales velit.</p>
+                            <h4>This is H4</h4>
+                            <p>This is right before H4. You may use this layout for your website. Please tell your friends about Tooplate. Thank you.<br><br>Cras suscipit, sem vel cursus iaculis, nibh augue placerat enim, in varius dolor turpis at augue. Nulla facilisi. In quis sem pellentesque, tristique ligula non, tincidunt ipsum. Curabitur porttitor, justo id egestas egestas, enim augue lacinia quam, et volutpat velit augue sodales velit.</p>
                             <div class="primary-button">
                               <a href="#t3">Discover More</a>
                             </div>
@@ -67,7 +60,7 @@ http://www.tooplate.com/view/2090-kinetic
                       </div>
                     </div>
                     </li>
-                  </div>  
+                  </div>
                   <div class="page" id="p3">
                     <li class="icon fa fa-image"><span class="title">Our Gallery</span>
                       <div class="container">
@@ -152,9 +145,9 @@ http://www.tooplate.com/view/2090-kinetic
                       </div>
                     </div>
                    </li>
-                  </div>  
-                  <p class="credit">Copyright &copy; 2017 Company Name 
-                        
+                  </div>
+                  <p class="credit">Copyright &copy; 2017 Company Name
+
                         - Designed by <a href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
                 </section>
               </div>
