--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
                    <a href="#t4"><li class="icon fa fa-phone" id="cuatro"></li></a>
                  </ul>
                   <div class="page" id="p1">
-                     <li class="icon fa fa-home"><span class="title">Welcome To</span><h4>Kinetic</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius neque non imperdiet auctor. Duis sit amet velit eu lorem sollicitudin sodales.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>
+                     <li class="icon fa fa-home"><span class="title">Portfolio</span><h4>Samuel Ruiz</h4><p>I am a senior at California State University Stanislaus pursuiting my degree in Computer Science. I have a passion for Software Engineering and Graphic Design.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>
                   </div>
                   <div class="page" id="p2">
-                    <li class="icon fa fa-user"><span class="title">About Us</span>
+                    <li class="icon fa fa-user"><span class="title">About Sam</span>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
                           <div class="left-text">
-                            <h4>This is H4</h4>
+                            <h4>Samuel Ruiz</h4>
                             <p>This is right before H4. You may use this layout for your website. Please tell your friends about Tooplate. Thank you.<br><br>Cras suscipit, sem vel cursus iaculis, nibh augue placerat enim, in varius dolor turpis at augue. Nulla facilisi. In quis sem pellentesque, tristique ligula non, tincidunt ipsum. Curabitur porttitor, justo id egestas egestas, enim augue lacinia quam, et volutpat velit augue sodales velit.</p>
                             <div class="primary-button">
-                              <a href="#t3">Discover More</a>
+                              <a href="#t3">Where does this take me?</a>
                             </div>
                           </div>
                         </div>
@@ -62,7 +62,7 @@
                     </li>
                   </div>
                   <div class="page" id="p3">
-                    <li class="icon fa fa-image"><span class="title">Our Gallery</span>
+                    <li class="icon fa fa-image"><span class="title">Graphic Design Work</span>
                       <div class="container">
                         <div class="row">
                           <div class="col-md-3 col-md-offset-1">
