Changed words around

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                      <li class="icon fa fa-home"><span class="title">Portfolio</span><h4>Samuel Ruiz</h4><p>I am a senior at California State University Stanislaus pursuiting my degree in Computer Science. I have a passion for Software Engineering and Graphic Design.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>
                   </div>
                   <div class="page" id="p2">
-                    <li class="icon fa fa-user"><span class="title">About Sam</span>
+                    <li class="icon fa fa-user"><span class="title">Samuel Ruiz</span>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
                           <div class="left-text">
-                            <h4>Samuel Ruiz</h4>
-                            <p>This is right before H4. You may use this layout for your website. Please tell your friends about Tooplate. Thank you.<br><br>Cras suscipit, sem vel cursus iaculis, nibh augue placerat enim, in varius dolor turpis at augue. Nulla facilisi. In quis sem pellentesque, tristique ligula non, tincidunt ipsum. Curabitur porttitor, justo id egestas egestas, enim augue lacinia quam, et volutpat velit augue sodales velit.</p>
+                            <h4>Projects</h4>
+                            <p>My passion in development is mobile development, more specifically, iOS. I've worked on a personal iOS game that I plan to push out into the app store soon.<br><br>I've worked with Java to build a Super Mario clone game, and have worked with C++ to implement software that synchonizes processor cores and hardware.</p>
                             <div class="primary-button">
-                              <a href="#t3">Where does this take me?</a>
+                              <a href="#t3">Want to see visuals of these projects?</a>
                             </div>
                           </div>
                         </div>
@@ -62,7 +62,7 @@
                     </li>
                   </div>
                   <div class="page" id="p3">
-                    <li class="icon fa fa-image"><span class="title">Graphic Design Work</span>
+                    <li class="icon fa fa-image"><span class="title">Visual work</span>
                       <div class="container">
                         <div class="row">
                           <div class="col-md-3 col-md-offset-1">
@@ -129,10 +129,9 @@
                          </div>
                          <div class="col-md-6">
                            <div class="right-info">
-                              <p>Lorem ipsum dolor , consectetur adipiscing elit. Nunc purus ligula, ullamcorper idermate velit id, vestibulum auc sapien. Sed quis mauris eget semps imperdiet rhoncus.<br><br>
-                              <em>120-360 Etiam mauris erat,<br>
-								Vestibulum eu augue nec, 10110<br>
-								Nam consequat<br></em></p>
+                              <p>I am based out of the California Central Valley. If you have any interest of concerns submit a message to my website using the form on the left.<br><br>
+                              <em>Central Valley, California<br>
+								United States<br></em></p>
                               <ol class="social-icons">
                                 <i><a href="#"><i class="fa fa-facebook"></i></a></i>
                                 <i><a href="#"><i class="fa fa-twitter"></i></a></i>
@@ -148,7 +147,7 @@
                   </div>
                   <p class="credit">Copyright &copy; 2017 Company Name
 
-                        - Designed by <a href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
+                        - Designed by Samuel Ruiz</a></p>
                 </section>
               </div>
             </div>
