--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="row">
                           <div class="col-md-3 col-md-offset-1">
                             <div class="project-item">
-                              <a href="img/item-01.jpg" data-lightbox="image-1"><img src="img/thumb-01.jpg"></a>
+                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"></a>
                             </div>
                           </div>
                           <div class="col-md-3">
@@ -145,7 +145,7 @@
                     </div>
                    </li>
                   </div>
-                  <p class="credit">Copyright &copy; 2017 Company Name
+                  <p class="credit">Copyright &copy; 2017
 
                         - Designed by Samuel Ruiz</a></p>
                 </section>
