--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                         <div class="row">
                           <div class="col-md-3 col-md-offset-1">
                             <div class="project-item">
-                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"></a>
+                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-3">
                             <div class="project-item">
-                              <a href="img/item-02.jpg" data-lightbox="image-1"><img src="img/thumb-02.jpg"></a>
+                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;></a>
                             </div>
                           </div>
                           <div class="col-md-4">
