--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/item-03.jpg" data-lightbox="image-1"><img src="img/thumb-03.jpg"></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
                             </div>
                           </div>
                           <div class="col-md-4 col-md-offset-1">
