--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li class="icon fa fa-image"><span class="title">Visual work</span>
                       <div class="container">
                         <div class="row">
-                          <div class="col-md-3 col-md-offset-1">
+                          <div class="col-md-3">
                             <div class="project-item">
                               <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;</a>
                             </div>
@@ -77,10 +77,10 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"target="_blank">&nbsp;>></a>
                             </div>
                           </div>
-                          <div class="col-md-4 col-md-offset-1">
+                          <div class="col-md-4">
                             <div class="project-item">
                               <a href="img/item-04.jpg" data-lightbox="image-1"><img src="img/thumb-04.jpg"></a>
                             </div>
