--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="col-md-6">
                           <div class="right-image">
-                            <img src="img/right-about-image.png" alt="">
+                            <img src="img/port.png" alt="">
                           </div>
                         </div>
                       </div>
