--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"target="_blank">&nbsp;>></a>
+                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;>></a>
                             </div>
                           </div>
                           <div class="col-md-4">
