--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                               <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;></a>
                             </div>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="project-item">
                               <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;>></a>
                             </div>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="project-item">
-                              <a href="img/item-04.jpg" data-lightbox="image-1"><img src="img/thumb-04.jpg"></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
                             </div>
                           </div>
                           <div class="col-md-3">
