--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                           </div>
                           <div class="col-md-3">
                             <div class="project-item">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
+                              <a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"></a>
                             </div>
                           </div>
                           <div class="col-md-3">
@@ -92,7 +92,7 @@
                           </div>
                           <div class="col-md-3">
                             <div class="project-item last-project">
-                              <a href="img/item-06.jpg" data-lightbox="image-1"><img src="img/thumb-06.jpg"></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
                             </div>
                           </div>
                         </div>
