--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                           </div>
                           <div class="col-md-3">
                             <div class="project-item">
-                              <a href="img/item-05.jpg" data-lightbox="image-1"><img src="img/thumb-05.jpg"></a>
+                              <a href="alert.gif" data-lightbox="image-1"><img src="img/alert.gif"></a>
                             </div>
                           </div>
                           <div class="col-md-3">
