--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                             </div>
                           </div>
                           <div class="col-md-3">
-                            <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;>></a>
+                            <div class="project-item">
+                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;>></a>
+                            </div>
                           </div>
                           <div class="col-md-3">
                             <div class="project-item">
