--- a/index.html
+++ b/index.html
@@ -70,29 +70,29 @@
                               <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-2">
                             <div class="project-item">
                               <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;></a>
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-2">
                             <div class="project-item">
                               <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;>></a>
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-2">
                             <div class="project-item">
                               <a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"></a>
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-2">
                             <div class="project-item">
                               <a href="alert.gif" data-lightbox="image-1"><img src="img/alert.gif"></a>
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-2">
                             <div class="project-item last-project">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
+                              <a href="img/alert.gif" data-lightbox="image-1"><img src="img/alert.gif"></a>
                             </div>
                           </div>
                         </div>
