--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                           </div>
                           <div class="col-md-2">
                             <div class="project-item">
-                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;></a>
+                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-2">
                             <div class="project-item">
-                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;>></a>
+                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-2">
