--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="row">
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp; Simple Calculator</a>
+                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-4">
