--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </li>
                   </div>
                   <div class="page" id="p3">
-                    <li class="icon fa fa-image"><span class="title">Visual work</span>
+                    <li class="icon fa fa-image"><span class="title">Tinkering with iOS</span>
                       <div class="container">
                         <div class="row">
                           <div class="col-md-4">
