added back semaphore picture in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item last-project">
-                              <a href="img/alert.gif" data-lightbox="image-1"><img src="img/alert.gif"></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
                             </div>
                           </div>
                         </div>
