fixed gif and added

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="alert.gif" data-lightbox="image-1"><img src="img/alert.gif"></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item last-project">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
+                              <a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"></a>
                             </div>
                           </div>
                         </div>
