Updated the button on projects page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <h4>Projects</h4>
                             <p>My passion in development is mobile development, more specifically, iOS. I've worked on a personal iOS game that I plan to push out into the app store soon.<br><br>I've worked with Java to build a Super Mario clone game, and have worked with C++ to implement software that synchonizes processor cores and hardware.</p>
                             <div class="primary-button">
-                              <a href="#t3">Want to see visuals of these projects?</a>
+                              <a href="#t3">Check out my iOS mini-projects</a>
                             </div>
                           </div>
                         </div>
