--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item last-project">
-                              <a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"><font color="white">User account creator, password checker.</font></a>
+                              <a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"><font color="white" size="3">User account creator, password checker.</font></a>
                             </div>
                           </div>
                         </div>
