--- a/index.html
+++ b/index.html
@@ -67,32 +67,32 @@
                         <div class="row">
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;<font color="white">Simple Calculator</font></a>
+                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;<font color="white" size="2">Simple Calculator</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;<font color="white">Writing entries needed for programming lagnugaes class.</font></a>
+                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;<font color="white" size="2">Writing entries needed for programming lagnugaes class.</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;<font color="white">Getting Gestures to work</font></a>
+                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;<font color="white" size="2">Getting Gestures to work</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"><font color="white">Saving strings from text fields.</font></a>
+                              <a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"><font color="white" size="2">Saving strings from text fields.</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"><font color="white">Semaphores and synchronizing processors.</font></a>
+                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"><font color="white" size="2">Semaphores and synchronizing processors.</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item last-project">
-                              <a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"><font color="white" size="3">User account creator, password checker.</font></a>
+                              <a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"><font color="white" size="2">User account creator, password checker.</font></a>
                             </div>
                           </div>
                         </div>
