--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;<font color="white" size="2">Writing entries needed for programming lagnugaes class.</font></a>
+                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;<font color="white" size="2">Number of writing entries need for my class.</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
