--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="row">
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;<font color="white" size="2">Simple Calculator</font></a>
+                              <font color="white" size="2">Simple two variable calculator</font><a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-4">
@@ -77,7 +77,7 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;<font color="white" size="2">Getting Gestures to work</font></a>
+                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;<font color="white" size="2">Getting touch gestures to work.</font></a>
                             </div>
                           </div>
                           <div class="col-md-4">
