--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;<font color="white" size="2">Number of writing entries need for my class.</font></a>
+                              <font color="white" size="2">Number of writing entries need for my class.</font><a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;<font color="white" size="2">Getting touch gestures to work.</font></a>
+                              <font color="white" size="2">Getting touch gestures to work.</font><a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;</a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"><font color="white" size="2">Saving strings from text fields.</font></a>
+                              <font color="white" size="2">Saving strings from text fields.</font><a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item">
-                              <a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"><font color="white" size="2">Semaphores and synchronizing processors.</font></a>
+                              <font color="white" size="2">Semaphores and synchronizing processors.</font><a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
                             </div>
                           </div>
                           <div class="col-md-4">
                             <div class="project-item last-project">
-                              <a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"><font color="white" size="2">User account creator, password checker.</font></a>
+                              <font color="white" size="2">User account creator, password checker.</font><a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"></a>
                             </div>
                           </div>
                         </div>
