--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </li>
                   </div>
                   <div class="page" id="p4">
-                   <li class="icon fa fa-phone"><span class="title">Contact Us</span>
+                   <li class="icon fa fa-phone"><span class="title">Contact Sam</span>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
