--- a/index.html
+++ b/index.html
@@ -1,175 +1,164 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Samuel Ruiz</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!DOCTYPE html>
+<html lang="en">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/fontAwesome.css">
-        <link rel="stylesheet" href="css/tooplate-style.css">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Parallax Template - Materialize</title>
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+</head>
+
+<body>
+  <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo">Samuel Ruiz</a>
+      <ul class="right hide-on-med-and-down">
+        <!-- Dropdown Trigger -->
+        <li><a class='dropdown-trigger btn black' href='#' data-target='dropdown1'>Portfolio Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+      <!-- Dropdown Structure -->
+      <ul id='dropdown1' class='dropdown-content hide-on-med-and-down'>
+        <li><a class="subheader grey-text">Development</a></li>
+        <li class="divider left" tabindex="-1"></li>
+        <li><a href="#" class="black-text right">Web Development</a></li>
+        <li><a href="#" class="black-text right">iOS Development</a></li>
+        <li class="divider left" tabindex="-1"></li>
+        <li><a class="subheader grey-text">Design</a></li>
+        <li class="divider" tabindex="-1"></li>
+        <li><a href="#" class="black-text right">Graphic Design</a></li>
+        <li><a href="#" class="black-text right">Video Editing</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        <li><a class="subheader">Subheader</a></li>
+        <li><a href="#" class="black-text">Web Development</a></li>
+        <li><a href="#" class="black-text">iOS Development</a></li>
+        <li class="divider" tabindex="-1"></li>
+        <li><a class="subheader">Subheader</a></li>
+        <li><a href="#" class="black-text">Graphic Design</a></li>
+        <li><a href="#" class="black-text">Video Editing</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
+    </div>
+  </nav>
+
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container center">
+        <br><br>
+        <img src="portrait.jpeg" alt="" class="center circle responsive-img">
+        <h1 class="header center white-text text-lighten-2 hide">Samuel Ruiz</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Web Developer | iOS Developer | Graphic Designer | Video Editor</h5>
+        </div>
+        <div class="row center">
+          <a href="#" id="download-button" class="btn-large waves-effect waves-light white lighten-1 black-text">View My Resume</a>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1" style="width: 100%"></div>
+  </div>
 
 
-        <div class="ct" id="t1">
-          <div class="ct" id="t2">
-            <div class="ct" id="t3">
-              <div class="ct" id="t4">
-                <section>
-                 <ul>
-                   <a href="#t1"><li class="icon fa fa-home" id="uno"></li></a>
-                   <a href="#t2"><li class="icon fa fa-user" id="dos"></li></a>
-                   <a href="#t3"><li class="icon fa fa-image" id="tres"></li></a>
-                   <a href="#t4"><li class="icon fa fa-phone" id="cuatro"></li></a>
-                 </ul>
-                  <div class="page" id="p1">
-                     <li class="icon fa fa-home"><span class="title">Portfolio</span><h4>Samuel Ruiz</h4><p>I am a senior at California State University Stanislaus pursuiting my degree in Computer Science. I have a passion for Software Engineering and Graphic Design.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>
-                  </div>
-                  <div class="page" id="p2">
-                    <li class="icon fa fa-user"><span class="title">Samuel Ruiz</span>
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <div class="left-text">
-                            <h4>Projects</h4>
-                            <p>My passion in development is mobile development, more specifically, iOS. I've worked on a personal iOS game that I plan to push out into the app store soon.<br><br>I've worked with Java to build a Super Mario clone game, and have worked with C++ to implement software that synchonizes processor cores and hardware.</p>
-                            <div class="primary-button">
-                              <a href="#t3">Check out my iOS mini-projects</a>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-md-6">
-                          <div class="right-image">
-                            <img src="img/port.png" alt="">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    </li>
-                  </div>
-                  <div class="page" id="p3">
-                    <li class="icon fa fa-image"><span class="title">Tinkering with iOS</span>
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-md-4">
-                            <div class="project-item">
-                              <font color="white" size="2">Simple two variable calculator</font><a href="img/simplecalcalculator.gif" data-lightbox="image-1"><img src="img/simplecalcalculator.gif"target="_blank">&nbsp;</a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="project-item">
-                              <font color="white" size="2">Number of writing entries need for my class.</font><a href="img/entriesneeded.gif" data-lightbox="image-1"><img src="img/entriesneeded.gif"target="_blank">&nbsp;</a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="project-item">
-                              <font color="white" size="2">Getting touch gestures to work.</font><a href="img/gestures.gif" data-lightbox="image-1"><img src="img/gestures.gif"target="_blank">&nbsp;</a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="project-item">
-                              <font color="white" size="2">Saving strings from text fields.</font><a href="img/birthday.gif" data-lightbox="image-1"><img src="img/birthday.gif"></a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="project-item">
-                              <font color="white" size="2">Semaphores and synchronizing processors.</font><a href="img/semaphores.png" data-lightbox="image-1"><img src="img/semaphores.png"></a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="project-item last-project">
-                              <font color="white" size="2">User account creator, password checker.</font><a href="img/saves.gif" data-lightbox="image-1"><img src="img/saves.gif"></a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                  </div>
-                  <div class="page" id="p4">
-                   <li class="icon fa fa-phone"><span class="title">Contact Sam</span>
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-md-6">
-                           <form id="contact" action="" method="post">
-                              <div class="col-md-12">
-                                <fieldset>
-                                  <input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required="">
-                                </fieldset>
-                              </div>
-                              <div class="col-md-12">
-                                <fieldset>
-                                  <input name="email" type="email" class="form-control" id="email" placeholder="Email" required="">
-                                </fieldset>
-                              </div>
-                              <div class="col-md-12">
-                                <fieldset>
-                                  <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message" required=""></textarea>
-                                </fieldset>
-                              </div>
-                              <div class="col-md-12">
-                                <fieldset>
-                                  <button type="submit" id="form-submit" class="btn">Send Message</button>
-                                </fieldset>
-                              </div>
-                            </form>
-                         </div>
-                         <div class="col-md-6">
-                           <div class="right-info">
-                              <p>I am based out of the California Central Valley. If you have any interest of concerns submit a message to my website using the form on the left.<br><br>
-                              <em>Central Valley, California<br>
-								United States<br></em></p>
-                              <ol class="social-icons">
-                                <i><a href="#"><i class="fa fa-facebook"></i></a></i>
-                                <i><a href="#"><i class="fa fa-twitter"></i></a></i>
-                                <i><a href="#"><i class="fa fa-linkedin"></i></a></i>
-                                <i><a href="#"><i class="fa fa-rss"></i></a></i>
-                                <i><a href="#"><i class="fa fa-behance"></i></a></i>
-                              </ol>
-                            </div>
-                         </div>
-                      </div>
-                    </div>
-                   </li>
-                  </div>
-                  <p class="credit">Copyright &copy; 2017
+  <div class="container">
+    <div class="section">
 
-                        - Designed by Samuel Ruiz</a></p>
-                </section>
-              </div>
-            </div>
-           </div>
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">school</i></h2>
+            <h5 class="center">Education</h5>
+
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
+        </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">work</i></h2>
+            <h5 class="center">Work Experience</h5>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center grey-text"><i class="material-icons">games</i></h2>
+            <h5 class="center">Hobbies</h5>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light black-text">Proficient in Adobe Suite</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2" style="width: 100%"></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Contact Me</h4>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">Proficient in After Effects & Adobe After Effects</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3" style="width: 100%"></div>
+  </div>
+
+  <footer class="page-footer black">
+    <div class="footer-copyright transparent">
+      <div class="container">
+        ©2019 Samuel Ruiz
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+  <script>
+    $('.dropdown-trigger').dropdown();
+  </script>
+
+</body>
+
 </html>
