changed the paralax middle center thing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Parallax Template - Materialize</title>
+  <title>Samuel Ruiz</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,35 +14,23 @@
 
 <body>
   <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Samuel Ruiz</a>
-      <ul class="right hide-on-med-and-down">
-        <!-- Dropdown Trigger -->
-        <li><a class='dropdown-trigger btn black' href='#' data-target='dropdown1'>Portfolio Projects</a></li>
+    <div class="nav-wrapper">
+      <a id="logo-container" href="#" class="brand-logo padding-left-50px">SR</a>
+      <ul class="right hide-on-med-and-down padding-right-50px">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Work</a></li>
         <li><a href="#">Contact</a></li>
-      </ul>
-
-      <!-- Dropdown Structure -->
-      <ul id='dropdown1' class='dropdown-content hide-on-med-and-down'>
-        <li><a class="subheader grey-text">Development</a></li>
-        <li class="divider left" tabindex="-1"></li>
-        <li><a href="#" class="black-text right">Web Development</a></li>
-        <li><a href="#" class="black-text right">iOS Development</a></li>
-        <li class="divider left" tabindex="-1"></li>
-        <li><a class="subheader grey-text">Design</a></li>
-        <li class="divider" tabindex="-1"></li>
-        <li><a href="#" class="black-text right">Graphic Design</a></li>
-        <li><a href="#" class="black-text right">Video Editing</a></li>
+        <li><a class='btn black' href='#'>Resume</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a class="subheader">Subheader</a></li>
-        <li><a href="#" class="black-text">Web Development</a></li>
-        <li><a href="#" class="black-text">iOS Development</a></li>
-        <li class="divider" tabindex="-1"></li>
-        <li><a class="subheader">Subheader</a></li>
-        <li><a href="#" class="black-text">Graphic Design</a></li>
-        <li><a href="#" class="black-text">Video Editing</a></li>
+        <li class="subheader" style="padding-left: 30px; padding-top: 20px; font-size: 1.5em;">Samuel Ruiz</li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a class='btn black' href='#'>Resume</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
     </div>
@@ -54,17 +42,16 @@
         <br><br>
         <img src="portrait.jpeg" alt="" class="center circle responsive-img">
         <h1 class="header center white-text text-lighten-2 hide">Samuel Ruiz</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">Web Developer | iOS Developer | Graphic Designer | Video Editor</h5>
-        </div>
-        <div class="row center">
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light white lighten-1 black-text">View My Resume</a>
+        <div class="flex column">
+          <h4 class="header1 d-align-self-flex-start">Hi, my name is</h5>
+          <h1 class="header2 d-align-self-flex-start">Samuel Ruiz</h5>
+          <h5 class="header3 d-align-self-flex-start">I am a software developer.</h5>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1" style="width: 100%"></div>
+    <div class="parallax"><img src="./img/background1.jpg" alt="Unsplashed background img 1" style="width: 100%"></div>
   </div>
 
 
@@ -78,7 +65,11 @@
             <h2 class="center grey-text"><i class="material-icons">school</i></h2>
             <h5 class="center">Education</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+              dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum.</p>
           </div>
         </div>
 
@@ -87,7 +78,11 @@
             <h2 class="center grey-text"><i class="material-icons">work</i></h2>
             <h5 class="center">Work Experience</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+              dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum.</p>
           </div>
         </div>
 
@@ -96,7 +91,11 @@
             <h2 class="center grey-text"><i class="material-icons">games</i></h2>
             <h5 class="center">Hobbies</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+              dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
@@ -113,7 +112,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2" style="width: 100%"></div>
+    <div class="parallax"><img src="./img/background2.jpg" alt="Unsplashed background img 2" style="width: 100%"></div>
   </div>
 
   <div class="container">
@@ -123,7 +122,11 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contact Me</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
 
@@ -139,7 +142,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3" style="width: 100%"></div>
+    <div class="parallax"><img src="./img/background3.jpg" alt="Unsplashed background img 3" style="width: 100%"></div>
   </div>
 
   <footer class="page-footer black">
