Get the flex-box values in place.
- still need to tweak minimal settings for the landing page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#">Experience</a></li>
         <li><a href="#">Work</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a class='btn black' href='#'>Resume</a></li>
+        <li><a class='btn black' href='#' style="border-radius: 3px;">Resume</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -36,20 +36,14 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container center">
-        <br><br>
-        <img src="portrait.jpeg" alt="" class="center circle responsive-img">
-        <h1 class="header center white-text text-lighten-2 hide">Samuel Ruiz</h1>
-        <div class="flex column">
-          <h4 class="header1 d-align-self-flex-start">Hi, my name is</h5>
-          <h1 class="header2 d-align-self-flex-start">Samuel Ruiz</h5>
-          <h5 class="header3 d-align-self-flex-start">I am a software developer.</h5>
-        </div>
-        <br><br>
-
-      </div>
+  <div id="index-banner" class="parallax-container flex">
+    <h1 class="header center white-text text-lighten-2 hide">Samuel Ruiz</h1>
+    <div class="flex column padding-left-50px" style="justify-content: center;">
+      <h5 class="header1 d-align-self-flex-start">Hi, my name is</h5>
+      <h1 class="header2 d-align-self-flex-start">Samuel Ruiz</h1>
+      <h1 class="header2 d-align-self-flex-start">I build things for the web.</h1>
+      <h6 class="header3 d-align-self-flex-start">I am a software developer.</h6>
+      <a class="waves-effect waves-light btn" style="width: 150px; border-radius: 3px;">Get In Touch</a>
     </div>
     <div class="parallax"><img src="./img/background1.jpg" alt="Unsplashed background img 1" style="width: 100%"></div>
   </div>
@@ -60,37 +54,9 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col">
           <div class="icon-block">
-            <h2 class="center grey-text"><i class="material-icons">school</i></h2>
-            <h5 class="center">Education</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-              deserunt mollit anim id est laborum.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center grey-text"><i class="material-icons">work</i></h2>
-            <h5 class="center">Work Experience</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-              deserunt mollit anim id est laborum.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center grey-text"><i class="material-icons">games</i></h2>
-            <h5 class="center">Hobbies</h5>
-
+            <h5>01. About Me</h5><hr>
             <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
               ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
               ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
@@ -101,18 +67,6 @@
       </div>
 
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light black-text">Proficient in Adobe Suite</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="./img/background2.jpg" alt="Unsplashed background img 2" style="width: 100%"></div>
   </div>
 
   <div class="container">
@@ -121,7 +75,7 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Me</h4>
+          <h4>02. Contact Me</h4><hr>
           <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
@@ -131,18 +85,6 @@
       </div>
 
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Proficient in After Effects & Adobe After Effects</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="./img/background3.jpg" alt="Unsplashed background img 3" style="width: 100%"></div>
   </div>
 
   <footer class="page-footer black">
